[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimization-orchestrator"
version = "0.1.0"
description = "Coordination layer for prompt optimization using RL-based selection"
requires-python = ">=3.11"
dependencies = [
    "llm-toolbox",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.82",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/prompt_optimization_orchestrator", "src/generator_react_agent"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
